tests/negative/typechecker_bad7.sp
(* Invalid return type *)

sample_error:Double (mean:Double, stddev:Double where stddev != 0) {
  return "error";
}


main: Int () {

    return 0;
}